# DM2025-Lab1-Exercise

./: DM2025-Lab1-Homework.ipynb  DM2025-Lab1-Master.ipynb  freq_patterns_comp_graphics_minSup9.txt  freq_patterns_sci_med_minSup9.txt  pyproject.toml
